add youchen sisi game

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="orientation.html">培养方案</a>
 					</li>
-					<!-- <li class="nav-item">
-						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
-					</li> -->
+					<li class="nav-item">
+						<a class="nav-link" href="students_project_exhibition.html">学员成果展</a>
+					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="honor_wall.html">赛事成绩和荣誉</a>
 					</li>
