--- a/students_project_exhibition.html
+++ b/students_project_exhibition.html
@@ -126,9 +126,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="orientation.html">培养方案</a>
 					</li>
-					<!-- <li class="nav-item">
-						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
-					</li> -->
+					<li class="nav-item">
+						<a class="nav-link" href="students_project_exhibition.html">学员成果展</a>
+					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="honor_wall.html">赛事成绩和荣誉</a>
 					</li>
@@ -149,12 +149,35 @@
 		
 		<section id="courses" style="align-content: center;background-color: white; padding-top: 60px; padding-bottom: 100px;">
 			<div class="container">
-				<h1>优秀学员</h1>
-					<p class="text-muted">
-						世界的未来从这里开始
-					</p>
+				<h1>游戏作品</h1>
+				<p class="text-muted">
+					世界的未来从这里开始
+				</p>
+
+				<h2 style="margin-top:50px">任思妍</h2>
+				<div class="card mb-3">
+					  <img src="images/sisigame.png" class="card-img-top" alt="Mario Jump">
+					  <div class="card-body">
+					    <h5 class="card-title">Mario Jump</h5>
+					    <p class="card-text">这是一个模仿Google小恐龙跳跃的小游戏，通过空格或鼠标左键点击进行控制。游戏具备背景音乐、分数显示，还有重新开始按钮。</p>
+					    <p class="card-text"><small class="text-muted">开发者：任思妍</small></p>
+					  </div>
+					  <button type="button" class="btn btn-primary" onclick="window.location.href='./sisidino/index.html';">立即试玩</button>
+				</div>
+
+				<h2 style="margin-top:50px">任佑宸</h2>
+				<div class="card mb-3">
+					  <img src="images/youchendino.png" class="card-img-top" alt="Mario Jump">
+					  <div class="card-body">
+					    <h5 class="card-title">恐龙大逃亡</h5>
+					    <p class="card-text">这是一个模仿Google小恐龙跳跃的小游戏，通过空格或鼠标左键点击进行控制。</p>
+					    <p class="card-text"><small class="text-muted">开发者：任佑宸</small></p>
+					  </div>
+					  <button type="button" class="btn btn-primary" onclick="window.location.href='./youchendino/index.html';">立即试玩</button>
+				</div>
 
 				<div class="card-deck">
+
 					<div class="card mb-3">
 					  <div class="row no-gutters">
 					    <div class="col-md-4">
@@ -162,7 +185,7 @@
 					    </div>
 					    <div class="col-md-8">
 					      <div class="card-body">
-					        <h5 class="card-title">Card title</h5>
+					        <h5 class="card-title"></h5>
 					        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 					        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 					      </div>
