--- a/students_project_exhibition.html
+++ b/students_project_exhibition.html
@@ -178,33 +178,53 @@
 
 				<div class="card-deck">
 
-					<div class="card mb-3">
-					  <div class="row no-gutters">
-					    <div class="col-md-4">
-					      <img src="" class="card-img" alt="">
-					    </div>
-					    <div class="col-md-8">
-					      <div class="card-body">
-					        <h5 class="card-title"></h5>
-					        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-					      </div>
-					    </div>
+					<div class="card" style="width: 18rem;">
+					  <img src="images/linxiaofenggame.png" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">New Dino Game</h5>
+						    <footer class="blockquote-footer">开发者： <cite title="Source Title">林晓峰</cite></footer>
+					    <p class="card-text">按鼠标左键跳跃，躲避金币、蘑菇。有问题联系开发者。</p>
+					    <a href="#" class="btn btn-primary">试玩体验</a>
 					  </div>
 					</div>
 
-					<div class="card mb-3">
-					  <div class="row no-gutters">
-					    <div class="col-md-4">
-					      <img src="" class="card-img" alt="">
-					    </div>
-					    <div class="col-md-8">
-					      <div class="card-body">
-					        <h5 class="card-title">Card title</h5>
-					        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-					        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-					      </div>
-					    </div>
+					<div class="card" style="width: 18rem;">
+					  <img src="images/taozhongruigame.png" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">小小马里奥，超级宇宙无敌勇敢霸龙探险</h5>
+						    <footer class="blockquote-footer">开发者： <cite title="Source Title">陶仲睿</cite></footer>
+					    <p class="card-text">按鼠标左键跳跃，来躲避蘑菇。</p>
+					    <a href="#" class="btn btn-primary">开始探险吧！</a>
+					  </div>
+					</div>
+
+					<div class="card" style="width: 18rem;">
+					  <img src="images/chendarungame.png" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">马里奥探险</h5>
+						    <footer class="blockquote-footer">开发者： <cite title="Source Title">陈达润</cite></footer>
+					    <p class="card-text">这是一款好玩又益智的小游戏，按鼠标左键躲避蘑菇。</p>
+					    <a href="#" class="btn btn-primary">开始游戏</a>
+					  </div>
+					</div>
+
+					<div class="card" style="width: 18rem;">
+					  <img src="images/zengyouchenggame.png" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">Wason Game</h5>
+						    <footer class="blockquote-footer">开发者： <cite title="Source Title">曾宥诚</cite></footer>
+					    <p class="card-text">简单益智小游戏，按鼠标左键开始跳跃，躲过蘑菇。</p>
+					    <a href="#" class="btn btn-primary">开始游戏</a>
+					  </div>
+					</div>
+
+					<div class="card" style="width: 18rem;">
+					  <img src="images/liyuchengame.png" class="card-img-top" alt="...">
+					  <div class="card-body">
+					    <h5 class="card-title">躲避原石计划</h5>
+						    <footer class="blockquote-footer">开发者： <cite title="Source Title">李禹陈</cite></footer>
+					    <p class="card-text">适龄3岁+，点击空格跳跃躲避。</p>
+					    <a href="#" class="btn btn-primary">开始游戏</a>
 					  </div>
 					</div>
 				</div>
