--- a/students_project_exhibition.html
+++ b/students_project_exhibition.html
@@ -227,6 +227,15 @@
 					    <a href="#" class="btn btn-primary">开始游戏</a>
 					  </div>
 					</div>
+
+					<div class="card" style="width: 18rem;">
+					  	<img src="images/liyuanyugame.png" class="card-img-top" alt="..." height="200" >
+					  	<div class="card-body">
+					    <h5 class="card-title">修勾大冒险</h5>
+					    <p class="card-text">一个很普通的游戏，智障玩家不可游玩。pos：可能有点难</p>
+					    <a href="liyuanyu/index.html" class="btn btn-outline-danger">go play</a>
+					  </div>
+					</div>
 				</div>
 			</div> 
 		</section>
