--- a/students_project_exhibition.html
+++ b/students_project_exhibition.html
@@ -176,67 +176,75 @@
 					  <button type="button" class="btn btn-primary" onclick="window.location.href='./youchendino/index.html';">立即试玩</button>
 				</div>
 
-				<div class="card-deck">
-
-					<div class="card" style="width: 18rem;">
-					  <img src="images/linxiaofenggame.png" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">New Dino Game</h5>
-						    <footer class="blockquote-footer">开发者： <cite title="Source Title">林晓峰</cite></footer>
-					    <p class="card-text">按鼠标左键跳跃，躲避金币、蘑菇。有问题联系开发者。</p>
-					    <a href="#" class="btn btn-primary">试玩体验</a>
-					  </div>
+				<div class="row row-cols-1 row-cols-md-3 g-4">
+  					<div class="col">
+						<div class="card" style="width: 18rem;">
+						  <img src="images/linxiaofenggame.png" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">New Dino Game</h5>
+							    <footer class="blockquote-footer">开发者： <cite title="Source Title">林晓峰</cite></footer>
+						    <p class="card-text">按鼠标左键跳跃，躲避金币、蘑菇。有问题联系开发者。</p>
+						    <a href="#" class="btn btn-primary">试玩体验</a>
+						  </div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card" style="width: 18rem;">
+						  <img src="images/taozhongruigame.png" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">小小马里奥，超级宇宙无敌勇敢霸龙探险</h5>
+							    <footer class="blockquote-footer">开发者： <cite title="Source Title">陶仲睿</cite></footer>
+						    <p class="card-text">按鼠标左键跳跃，来躲避蘑菇。</p>
+						    <a href="#" class="btn btn-primary">开始探险吧！</a>
+						  </div>
+						</div>
 					</div>
 
-					<div class="card" style="width: 18rem;">
-					  <img src="images/taozhongruigame.png" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">小小马里奥，超级宇宙无敌勇敢霸龙探险</h5>
-						    <footer class="blockquote-footer">开发者： <cite title="Source Title">陶仲睿</cite></footer>
-					    <p class="card-text">按鼠标左键跳跃，来躲避蘑菇。</p>
-					    <a href="#" class="btn btn-primary">开始探险吧！</a>
-					  </div>
+					<div class="col">
+						<div class="card" style="width: 18rem;">
+						  <img src="images/chendarungame.png" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">马里奥探险</h5>
+							    <footer class="blockquote-footer">开发者： <cite title="Source Title">陈达润</cite></footer>
+						    <p class="card-text">这是一款好玩又益智的小游戏，按鼠标左键躲避蘑菇。</p>
+						    <a href="#" class="btn btn-primary">开始游戏</a>
+						  </div>
+						</div>
 					</div>
 
-					<div class="card" style="width: 18rem;">
-					  <img src="images/chendarungame.png" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">马里奥探险</h5>
-						    <footer class="blockquote-footer">开发者： <cite title="Source Title">陈达润</cite></footer>
-					    <p class="card-text">这是一款好玩又益智的小游戏，按鼠标左键躲避蘑菇。</p>
-					    <a href="#" class="btn btn-primary">开始游戏</a>
-					  </div>
+					<div class="col">
+						<div class="card" style="width: 18rem;">
+						  <img src="images/zengyouchenggame.png" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">Wason Game</h5>
+							    <footer class="blockquote-footer">开发者： <cite title="Source Title">曾宥诚</cite></footer>
+						    <p class="card-text">简单益智小游戏，按鼠标左键开始跳跃，躲过蘑菇。</p>
+						    <a href="#" class="btn btn-primary">开始游戏</a>
+						  </div>
+						</div>
 					</div>
-
-					<div class="card" style="width: 18rem;">
-					  <img src="images/zengyouchenggame.png" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">Wason Game</h5>
-						    <footer class="blockquote-footer">开发者： <cite title="Source Title">曾宥诚</cite></footer>
-					    <p class="card-text">简单益智小游戏，按鼠标左键开始跳跃，躲过蘑菇。</p>
-					    <a href="#" class="btn btn-primary">开始游戏</a>
-					  </div>
+					<div class="col">
+						<div class="card" style="width: 18rem;">
+						  <img src="images/liyuchengame.png" class="card-img-top" alt="...">
+						  <div class="card-body">
+						    <h5 class="card-title">躲避原石计划</h5>
+							    <footer class="blockquote-footer">开发者： <cite title="Source Title">李禹陈</cite></footer>
+						    <p class="card-text">适龄3岁+，点击空格跳跃躲避。</p>
+						    <a href="#" class="btn btn-primary">开始游戏</a>
+						  </div>
+						</div>
 					</div>
-
-					<div class="card" style="width: 18rem;">
-					  <img src="images/liyuchengame.png" class="card-img-top" alt="...">
-					  <div class="card-body">
-					    <h5 class="card-title">躲避原石计划</h5>
-						    <footer class="blockquote-footer">开发者： <cite title="Source Title">李禹陈</cite></footer>
-					    <p class="card-text">适龄3岁+，点击空格跳跃躲避。</p>
-					    <a href="#" class="btn btn-primary">开始游戏</a>
-					  </div>
+					<div class="col">
+						<div class="card" style="width: 18rem;">
+						  	<img src="images/liyuanyugame.png" class="card-img-top" alt="..." height="200" >
+						  	<div class="card-body">
+						    <h5 class="card-title">修勾大冒险</h5>
+						    	<footer class="blockquote-footer">开发者： <cite title="Source Title">黎原语</cite></footer>
+						    <p class="card-text">一个很普通的游戏，智障玩家不可游玩。pos：可能有点难</p>
+						    <a href="liyuanyu/index.html" class="btn btn-outline-danger">go play</a>
+						  </div>
+						</div>
 					</div>
-
-					<div class="card" style="width: 18rem;">
-					  	<img src="images/liyuanyugame.png" class="card-img-top" alt="..." height="200" >
-					  	<div class="card-body">
-					    <h5 class="card-title">修勾大冒险</h5>
-					    <p class="card-text">一个很普通的游戏，智障玩家不可游玩。pos：可能有点难</p>
-					    <a href="liyuanyu/index.html" class="btn btn-outline-danger">go play</a>
-					  </div>
-					</div>
-				</div>
 			</div> 
 		</section>
 		
