update toutou game

--- a/students_project_exhibition.html
+++ b/students_project_exhibition.html
@@ -230,7 +230,7 @@
 						    <h5 class="card-title">躲避原石计划</h5>
 							    <footer class="blockquote-footer">开发者： <cite title="Source Title">李禹陈</cite></footer>
 						    <p class="card-text">适龄3岁+，点击空格跳跃躲避。</p>
-						    <a href="#" class="btn btn-primary">开始游戏</a>
+						    <a href="toutou/index.html" class="btn btn-primary">开始游戏</a>
 						  </div>
 						</div>
 					</div>
