--- a/students_project_exhibition.html
+++ b/students_project_exhibition.html
@@ -225,7 +225,7 @@
 					</div>
 					<div class="col">
 						<div class="card" style="width: 18rem;">
-						  <img src="images/liyuchengame.png" class="card-img-top" alt="...">
+						  <img src="images/toutougame2.png" class="card-img-top" alt="...">
 						  <div class="card-body">
 						    <h5 class="card-title">躲避原石计划</h5>
 							    <footer class="blockquote-footer">开发者： <cite title="Source Title">李禹陈</cite></footer>
