--- a/toutou/index.html
+++ b/toutou/index.html
@@ -33,7 +33,7 @@
 	</audio>
 	
 	<div>
-		<h1 style="color: purple; font-size: 50px;">GameCubes</h1>
+		<h1 style="color: purple; font-size: 50px;">躲避原石计划</h1>
 		<div style="display: flex;">
 		<img src="diamond.png" width="30px" height="30px">
 		<div id="score"></div>
