--- a/students_project_exhibition.html
+++ b/students_project_exhibition.html
@@ -177,8 +177,8 @@
 				</div>
 
 				<div class="row row-cols-1 row-cols-md-3 g-4">
-  					<div class="col">
-						<div class="card" style="width: 18rem;">
+					<div class="col" style="margin-top: 10px;">
+						<div class="card h-100" style="width: 18rem;">
 						  <img src="images/linxiaofenggame.png" class="card-img-top" alt="...">
 						  <div class="card-body">
 						    <h5 class="card-title">New Dino Game</h5>
@@ -188,8 +188,8 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card" style="width: 18rem;">
+					<div class="col" style="margin-top: 10px;">
+						<div class="card h-100" style="width: 18rem;">
 						  <img src="images/taozhongruigame.png" class="card-img-top" alt="...">
 						  <div class="card-body">
 						    <h5 class="card-title">小小马里奥，超级宇宙无敌勇敢霸龙探险</h5>
@@ -200,8 +200,8 @@
 						</div>
 					</div>
 
-					<div class="col">
-						<div class="card" style="width: 18rem;">
+					<div class="col" style="margin-top: 10px;">
+						<div class="card h-100" style="width: 18rem;">
 						  <img src="images/chendarungame.png" class="card-img-top" alt="...">
 						  <div class="card-body">
 						    <h5 class="card-title">马里奥探险</h5>
@@ -212,8 +212,8 @@
 						</div>
 					</div>
 
-					<div class="col">
-						<div class="card" style="width: 18rem;">
+					<div class="col" style="margin-top: 10px;">
+						<div class="card h-100" style="width: 18rem;">
 						  <img src="images/zengyouchenggame.png" class="card-img-top" alt="...">
 						  <div class="card-body">
 						    <h5 class="card-title">Wason Game</h5>
@@ -223,8 +223,8 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card" style="width: 18rem;">
+					<div class="col" style="margin-top: 10px;">
+						<div class="card h-100" style="width: 18rem;">
 						  <img src="images/toutougame2.png" class="card-img-top" alt="...">
 						  <div class="card-body">
 						    <h5 class="card-title">躲避原石计划</h5>
@@ -234,8 +234,8 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card" style="width: 18rem;">
+					<div class="col" style="margin-top: 10px;">
+						<div class="card h-100" style="width: 18rem;">
 						  	<img src="images/liyuanyugame.png" class="card-img-top" alt="..." height="200" >
 						  	<div class="card-body">
 						    <h5 class="card-title">修勾大冒险</h5>
@@ -245,7 +245,18 @@
 						  </div>
 						</div>
 					</div>
-			</div> 
+					<div class="col" style="margin-top: 10px;">
+						<div class="card" style="width: 18rem;">
+						  <img src="https://ts1.cn.mm.bing.net/th/id/R-C.94952cba206594093822a297771f0c31?rik=8aZ9RZrAX%2b5VaQ&riu=http%3a%2f%2fwww.3dmgame.com%2fuploads%2fallimg%2f171207%2f379-1G20G53159-50.png&ehk=F8KIWsvV9uWLTOWjL77kvYm1W%2bAzQ9IPx5X0xRt%2bNHk%3d&risl=&pid=ImgRaw&r=0" class="card-img-top" alt="111">
+						  <div class="card-body">
+						    <h5 class="card-title">马里奥跑酷</h5>
+						    <p class="card-text">马里奥在跑酷途中需躲避蘑菇</p>
+						    <a href="luochen/index.html" class="btn btn-primary">了解详细</a>
+						  	</div>
+						</div>
+					</div>
+				</div> 
+			</div>
 		</section>
 		
 
