--- a/toutou/index.html
+++ b/toutou/index.html
@@ -17,13 +17,13 @@
     		>Active</a>
   		</li>
  	 	<li class="nav-item">
-  	 	 <a class="nav-link" href="#">Link</a>
+  	 	 <a class="nav-link" href="#">角色介绍</a>
  	 	</li>
  	 	<li class="nav-item">
-   	 	<a class="nav-link" href="#">Link</a>
+   	 	<a class="nav-link" href="#">游戏背景</a>
  	 	 </li>
  	 	<li class="nav-item">
-   		 <a class="nav-link disabled">Disabled</a>
+   		 <a class="nav-link disabled">开发者简介</a>
  		 </li>
 		</ul>
 		</div>
@@ -33,15 +33,15 @@
 	</audio>
 	
 	<div>
-		<h1 style="color: purple; font-size: 50px;">躲避原石计划</h1>
+		<h1 style="color: purple; font-size: 50px;">原石躲避计划</h1>
 		<div style="display: flex;">
 		<img src="diamond.png" width="30px" height="30px">
 		<div id="score"></div>
-		<div style="margin-left: 100px;"><button onclick="restart()">Restart</button></div>
+		<div style="margin-left: 100px;"><button type="button" class="btn btn-outline-info" onclick="restart()">重新开始</button></div>
 	</div>
 	</div>
 	<div id='game'>
-		<div id='character'><img src="shgxh.png" width="75px" height="170px"></div>
+		<div id='character'><img src="bbl.png" width="75px" height="170px"></div>
 		<div id='block'><img src="ysh.png" width="30px" height="30px"></div>
 		<div id='gameover'></div>
 	</div>
