--- a/students_project_exhibition.html
+++ b/students_project_exhibition.html
@@ -219,7 +219,7 @@
 						    <h5 class="card-title">Wason Game</h5>
 							    <footer class="blockquote-footer">开发者： <cite title="Source Title">曾宥诚</cite></footer>
 						    <p class="card-text">简单益智小游戏，按鼠标左键开始跳跃，躲过蘑菇。</p>
-						    <a href="#" class="btn btn-primary">开始游戏</a>
+						    <a href="youcheng/index.html" class="btn btn-primary">开始游戏</a>
 						  </div>
 						</div>
 					</div>
