--- a/youcheng/index.html
+++ b/youcheng/index.html
@@ -18,7 +18,7 @@
 			<source src="Upbeat.mp3" type="audio/mpeg">
 		</audio>
 	</div>
-	
+
 	<div id="game">
 		<div id='background'>
 			<img src="bg.jpeg" height="300px" width="110%">
@@ -32,8 +32,10 @@
 		<div id="block">
 			<img src="obs.png" width="150px" height="150px">
 		</div>
-		
+		<h1 id='gameoverTitle' style="color: red; font-weight: bold; visibility: hidden;">摔倒了，刷新网页重新挑战！</h1>
 	</div>
+
+
 
 	<script type="text/javascript" src="script.js"></script>
 </body>
