--- a/students_project_exhibition.html
+++ b/students_project_exhibition.html
@@ -214,11 +214,15 @@
 
 					<div class="col" style="margin-top: 10px;">
 						<div class="card h-100" style="width: 18rem;">
-						  <img src="images/zengyouchenggame.png" class="card-img-top" alt="...">
+						  <img src="images/youchengcover.png" class="card-img-top" alt="...">
 						  <div class="card-body">
-						    <h5 class="card-title">Wason Game</h5>
+						    <h5 class="card-title">Wason 运动会 -- 跨栏</h5>
 							    <footer class="blockquote-footer">开发者： <cite title="Source Title">曾宥诚</cite></footer>
-						    <p class="card-text">简单益智小游戏，按鼠标左键开始跳跃，躲过蘑菇。</p>
+						    <p class="card-text">这款基于HTML编程的跨栏小游戏将为玩家带来刺激的游戏体验。通过点击鼠标来控制角色进行跳跃，玩家需要在不断出现的跨栏之间穿梭躲避。成功躲避每个跨栏都会奖励分数，但如果不慎撞上跨栏，游戏会提示摔倒重新开始。
+
+							为了增强游戏的氛围感，我们还加入了背景音乐，让玩家在游戏中感受到音乐与挑战的结合。玩家可以根据自己的喜好选择不同的背景音乐来打造自己喜欢的游戏氛围。
+
+							总之，这款跨栏小游戏既有挑战性又易上手，玩家们可以在其中享受到乐趣，尽情挑战自己的反应速度和技能，赢得最高分吧！</p>
 						    <a href="youcheng/index.html" class="btn btn-primary">开始游戏</a>
 						  </div>
 						</div>
